--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div>
           <h1 class="titulo">Axel Moncayo<br />Web Developer</h1>
           <a
-            href="https://drive.google.com/file/d/1JMh6JFeZO8sBRQ_I_aguEc6SYTfgC7w-/view?usp=drive_link"
+            href="https://drive.google.com/drive/folders/1WI6zPaHV0OMWFJtG-8Uog3gPD4MJad7_?usp=sharing"
             target="_blank"
           >
             <button class="boton">Curriculum</button>
